--- a/fe/package.json
+++ b/fe/package.json
@@ -12,6 +12,7 @@
     "@tanstack/react-query": "^5.17.19",
     "axios": "^1.6.7",
     "next": "14.1.0",
+    "next-auth": "^4.24.5",
     "react": "^18",
     "react-dom": "^18"
   },
