--- a/be/package.json
+++ b/be/package.json
@@ -28,6 +28,7 @@
     "@nestjs/typeorm": "^10.0.1",
     "bcrypt": "^5.1.1",
     "pg": "^8.11.3",
+    "puppeteer": "^21.10.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.20"
@@ -39,7 +40,9 @@
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.3.1",
+    "@types/puppeteer": "^7.0.4",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
