--- a/be/package.json
+++ b/be/package.json
@@ -27,6 +27,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.1",
     "bcrypt": "^5.1.1",
+    "fast-csv": "^5.0.0",
     "pg": "^8.11.3",
     "puppeteer": "^21.10.0",
     "reflect-metadata": "^0.1.13",
